<resources>
    <string name="app_name">projetoCM</string>
    <string name="login">Login</string>
    <string name="registar">Create Account</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="noaccount">No Account? Sign Up Here</string>
    <string name="cred_erradas">Wrong Email and/or password</string>
    <string name="prompt_nova_password">New Password</string>
    <string name="prompt_conf_password">Repeat Password</string>
    <string name="accountCreated">Account Created! You can login now!</string>
    <string name="bilhete_textvview">Ticket</string>
    <string name="bilhete_textview2">Fill in the data</string>
    <string name="edit_minutos">Time (minutes)</string>
    <string name="btn_confirm">Confirm</string>
    <string name="cartao_multi">Credit Card</string>
    <string name="cartao_info">Fill in your Credit Card info:</string>
    <string name="cartao_nome">Card Name</string>
    <string name="cartao_numeros">Card Numbers</string>
    <string name="cartao_data">Card Validity</string>
    <string name="cartao_ccv">CCV</string>
    <string name="mbway_contacto">Phone Number</string>
    <string name="mbway_text">Fill in your Mbway number:</string>
    <string name="mbway">Mbway</string>
    <string name="ticket_history">Ticket History</string>
    <string name="no_tickets">NO TICKETS</string>
    <string name="reservation_dettails">Reservation Details</string>
    <string name="info_ticket">Information about your Ticket:</string>
    <string name="hora_entrada">Entry Time</string>
    <string name="time_chosen">Time Chosen</string>
    <string name="Price">Price</string>
    <string name="pay">PAY</string>
    <string name="payment">Payment</string>
    <string name="payment_method_text">Choose Payment Method:</string>
    <string name="reviewParque">Park Review</string>
    <string name="reviewParqueComentario">Comment</string>
    <string name="reviewParqueBotaoSubmeter">Submit</string>
    <string name="registoTitulocraiarConta">Account Creation</string>
    <string name="registoETnome">Name</string>
    <string name="registoETemail">Email</string>
    <string name="registoETpassword">Password</string>
    <string name="registoETcontacto">Contact</string>
    <string name="registoETfazerlogin">Already have an account? Do it Log in.</string>
    <string name="registoETBotaoRegistar">Register</string>
    <string name="perfilboataoAtualizar">Update</string>
    <string name="alterarperfilPass">Change Password</string>
</resources>