<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartaoMultibanco">

    <TextView
        android:id="@+id/tvPagamentoCartaoMultibanco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="180dp"
        android:fontFamily="serif"
        android:text="@string/cartao_multi"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="166dp"
        android:text="@string/cartao_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPagamentoCartaoMultibanco" />

    <EditText
        android:id="@+id/etNomeDoCartao"
        android:layout_width="280dp"
        android:layout_height="57dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:fontFamily="serif"
        android:inputType="textPersonName"
        android:hint="@string/cartao_nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etNumeroDoCartao"
        android:layout_width="280dp"
        android:layout_height="57dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:fontFamily="serif"
        android:inputType="number"
        android:hint="@string/cartao_numeros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeDoCartao" />

    <EditText
        android:id="@+id/etValidadeDoCartao"
        android:layout_width="150dp"
        android:layout_height="57dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/cartao_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumeroDoCartao" />

    <EditText
        android:id="@+id/etCVV2CVC2"
        android:layout_width="105dp"
        android:layout_height="57dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/cartao_ccv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etValidadeDoCartao"
        app:layout_constraintTop_toBottomOf="@+id/etNumeroDoCartao" />

    <Button
        android:id="@+id/buttonCartaoMultibanco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/btn_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValidadeDoCartao" />


</androidx.constraintlayout.widget.ConstraintLayout>