<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:hint="@string/prompt_email"
        android:layout_height="wrap_content"
        android:layout_above="@id/etPassword"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:onClick="onClickEmail"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:onClick="onClickPassword"
        />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/login"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/btRegisto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fontFamily="serif"
        android:onClick="onClickRegisto"
        android:text="Ainda não tem conta? Registe-se."
        android:textSize="10sp"
        android:layout_below="@id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/btPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/login"
        android:layout_below="@+id/btRegisto"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cred_erradas"
        android:layout_below="@id/btPass"
        android:layout_centerHorizontal="true"
        android:textColor="#ff0000"
        android:visibility="gone"
        android:id="@+id/tvwrong"/>



</RelativeLayout>